--- a/css/styles.scss
+++ b/css/styles.scss
@@ -83,14 +83,16 @@ body{
 
 // scss for assignment 4
 
-.modal-header {
-	background:$background-dark;
-	color:floralwhite;
-	
-	button {
-		color:floralwhite;
-	}
-}
 .modal-body {
-	background:$background-pale;
+    background-color: $background-pale;
+
+}
+
+.modal-header {
+    background-color: $background-dark;
+    color: white;
+}
+
+.close {
+    color : floralwhite;
 }
